# mail-sorter

./: .env  Cargo.toml  config.toml
src/: mail-sorter  main.rs
